--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,10 @@
     "@clerk/elements": "^0.23.59",
     "@clerk/nextjs": "^6.31.6",
     "@iconify/react": "^6.0.1",
+    "@tabler/icons-react": "^3.34.1",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
