--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "@upstash/redis": "^1.35.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.8.0",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.2",
@@ -25,6 +27,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redis": "^5.8.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
